# ChangeLog for app-admin/gamin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/gamin/ChangeLog,v 1.89 2008/07/14 05:15:34 jer Exp $

  14 Jul 2008; Jeroen Roovers <jer@gentoo.org> gamin-0.1.9-r1.ebuild:
  Stable for HPPA (bug #228087).

  25 Jun 2008; Santiago M. Mola <coldwind@gentoo.org> gamin-0.1.9-r1.ebuild:
  amd64 stable wrt bug #228087.

  21 Jun 2008; Markus Rothe <corsair@gentoo.org> gamin-0.1.9-r1.ebuild:
  Stable on ppc64; bug #228087

  19 Jun 2008; nixnut <nixnut@gentoo.org> gamin-0.1.9-r1.ebuild:
  Stable on ppc wrt bug 228087

  18 Jun 2008; Raúl Porcel <armin76@gentoo.org> gamin-0.1.9-r1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #228087

  12 Jun 2008; Ben de Groot <yngwin@gentoo.org> gamin-0.1.9-r1.ebuild:
  Adding append-flags -D_GNU_SOURCE to fix bug 225403. Commit approved by
  mraudsepp.

  29 May 2008; Ali Polatel <hawking@gentoo.org> gamin-0.1.9-r1.ebuild:
  python_mod_optimize is ROOT aware.

  05 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org> gamin-0.1.9-r1.ebuild:
  fix python eclass use, fix bug #212830 (again)

*gamin-0.1.9-r1 (05 Apr 2008)

  05 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gamin-0.1.9-r1.ebuild:
  make python bindings optional, fix bug #212830

  06 Nov 2007; Mart Raudsepp <leio@gentoo.org> -gamin-0.1.7.ebuild,
  -gamin-0.1.8.ebuild:
  Remove old CPU wakeup happy versions

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org> gamin-0.1.9.ebuild:
  sparc stable wrt #193339

  03 Oct 2007; Tom Gall <tgall@gentoo.org> gamin-0.1.9.ebuild:
  stable on ppc64

  27 Sep 2007; Raúl Porcel <armin76@gentoo.org> gamin-0.1.9.ebuild:
  alpha/ia64 stable wrt #193339

  26 Sep 2007; Joshua Kinard <kumba@gentoo.org> gamin-0.1.9.ebuild:
  Stable on mips, per #193339.

  25 Sep 2007; Jeroen Roovers <jer@gentoo.org> gamin-0.1.9.ebuild:
  Stable for HPPA (bug #193339).

  22 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org> gamin-0.1.9.ebuild:
  ppc stable, bug #193339
