@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/gamin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/gamin/ChangeLog,v 1.89 2008/07/14 05:15:34 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/gamin/ChangeLog,v 1.90 2008/11/24 23:14:07 eva Exp $
+
+*gamin-0.1.10 (24 Nov 2008)
+
+  24 Nov 2008; Gilles Dartiguelongue <eva@gentoo.org> +gamin-0.1.10.ebuild:
+  Bump to 0.1.10. This ebuild is now a meta that pull the split elements of
+  gamin. Closes bug #217861.
 
   14 Jul 2008; Jeroen Roovers <jer@gentoo.org> gamin-0.1.9-r1.ebuild:
   Stable for HPPA (bug #228087).
